feat: get m2 valuation average for a city and create valuation
